--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,10 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="../src/style.css" />
-
+		<!--
+      It's important to link the fonts before the css so that we can reference them 
+      correctly inside our css
+    -->
 		<title>React App</title>
 	</head>
 	<body>
